# url-shortener-python

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/api/: deps.py  router.py
app/api/routes/: auth.py  urls.py
app/core/: config.py  logging.py  security.py
app/db/: indexes.py  mongo.py  redis.py
app/schemas/: auth.py  common.py  url.py  user.py
app/services/: token_service.py  url_service.py  user_service.py
app/tasks/: analytics.py  celery_app.py
app/utils/: id_generator.py
tests/: test_id_generator.py
